--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7565,6 +7565,26 @@ textarea.form-control-lg {
   border-width: 5px !important;
 }
 
+.border-6 {
+  border-width: 6px !important;
+}
+
+.border-7 {
+  border-width: 7px !important;
+}
+
+.border-8 {
+  border-width: 8px !important;
+}
+
+.border-9 {
+  border-width: 9px !important;
+}
+
+.border-10 {
+  border-width: 10px !important;
+}
+
 .border-opacity-10 {
   --bs-border-opacity: 0.1;
 }
@@ -8315,6 +8335,22 @@ textarea.form-control-lg {
 
 .fs-6 {
   font-size: 1rem !important;
+}
+
+.fs-7 {
+  font-size: 0.9rem !important;
+}
+
+.fs-8 {
+  font-size: 0.8rem !important;
+}
+
+.fs-9 {
+  font-size: 0.7rem !important;
+}
+
+.fs-10 {
+  font-size: 0.6rem !important;
 }
 
 .fst-italic {
@@ -11982,4 +12018,37 @@ nav .btn {
   margin-top: 2rem;
   border-radius: 10px;
   padding: 2rem;
+}
+.eveline p {
+  color: #cc3178;
+  font-weight: 500;
+  font-size: 1.5rem;
+}
+.eveline .hero {
+  display: flex;
+  align-items: center;
+}
+.eveline .hero h1, .eveline .hero .h1 {
+  font-size: 4rem;
+  font-weight: 300;
+  color: #5726c3;
+}
+.eveline .hero p {
+  margin-bottom: 0;
+  color: rgb(131, 130, 130);
+  font-size: 1rem;
+  font-weight: 100;
+}
+
+.title {
+  margin-top: 2rem;
+}
+
+.card-block {
+  display: flex;
+  flex-wrap: wrap;
+}
+.card-block .card {
+  width: 20%;
+  margin-inline: 1rem;
 }/*# sourceMappingURL=style.css.map */
